fixing app overflow issue #2

--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+    overflow: hidden;
+}
+
 body {
     height: 100dvh;
     overflow: hidden;
